--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -40,5 +40,25 @@
   margin-bottom: 0.75rem;
   color: #444;
 
-@include clearfix();
+}
+.custom-tooltip {
+  width: 400px;
+  margin: 0;
+  line-height: 24px;
+  border: 1px solid #f5f5f5;
+  background-color: hsla(0,0%,100%,.8);
+  padding: 10px;
+}
+
+.loading-component{
+  /*margin-left: -100px;*/
+  /*margin-top:-50px;*/
+  position:fixed;
+  top: 50%;
+  left: 50%;
+  color: floralwhite ;
+  /*width: 200px;*/
+  /*height: 100px;*/
+  /*border: 1px solid #f5f5f5;*/
+  /*background-color: hsla(0,0%,100%,.8);*/
 }
