--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -56,3 +56,18 @@
   left: 50%;
   color: floralwhite ;
 }
+
+.select-component{
+  position:absolute;
+  top: 100px;
+  right: 200px;
+  border-radius: 20px;
+  background-color: hsla(0,0%,100%,.8);
+  width: 300px;
+  padding-bottom: 20px;
+  padding-top: 20px;
+}
+a a:active a:hover{
+  text-decoration:none;
+  color: black;
+}
